--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -6,5 +6,14 @@
     margin-bottom: 10px;
     border: solid 1px #ae99b0;
     background-color: #A2CEC4;
+  } h1 {
+    font-family:American Typewriter;
   }
-  
+h1{
+  color: rgb(55, 55, 120);
+  font-size: 200%;
+}
+p {
+  text-indent: 20px;
+  margin-left: 10px;
+} 
