--- a/lab2/lab2.css
+++ b/lab2/lab2.css
@@ -1,5 +1,6 @@
 h1{
-    color: hsl(174, 38%, 71%);
+    color: hsl(175, 19%, 34%);
+    background-color: lightblue; 
     font-size: 200%;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -18,4 +19,7 @@ p{
     margin: 10px;
     border: solid 1px #8aad75;
     font-size: 20px;
+}
+body {
+    text-align: center;
 }
