--- a/lab2/lab2.css
+++ b/lab2/lab2.css
@@ -1,6 +1,6 @@
 h1{
-    color: hsl(175, 19%, 34%);
-    background-color: lightblue; 
+    color: hsl(174, 15%, 28%);
+    background-color: rgb(144, 189, 204); 
     font-size: 200%;
     font-family: Arial, Helvetica, sans-serif;
 }
