--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -4,6 +4,38 @@
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
+    border: solid 1px #a32121;
+    background-color: #d5ca9f;
+    p.inset {border-style: inset;}
+  background-color: #edb889;
+  }
+
+  body {
+    background-color: #c8c294;
+  }
+  
+  /* we can have rules apply to multiple elements at the same time with commas */
+  h1,h2,h3 {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  /* and we can have rules that overlap other rules, both take effect */
+  h1 {
+    letter-spacing: 5px;
+    word-spacing: 5px;
+    font-size: 200%;
+  }
+  
+  .autania photo {margin: 10px;
+  max-width: 350px;}
+  /* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
+  #content {
+    margin: 10px;
+    padding: 10px;
+    border: solid 11px #fd8e7a;
+    background-color: #9e3030;
+  }
+  
+  a {
+    display: block;
   }
