--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -1,41 +1,16 @@
-/* Here we can set styles for this lab page that we don't want to effect others pages */
-
-/* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 .minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #a32121;
-    background-color: #d5ca9f;
-    p.inset {border-style: inset;}
-  background-color: #edb889;
-  }
+  padding: 10px;
+  margin-bottom: 10px;
+  border: solid 15px #a83535;
+  background-color: #cdb491;
+}
 
-  body {
-    background-color: #c8c294;
-  }
-  
-  /* we can have rules apply to multiple elements at the same time with commas */
-  h1,h2,h3 {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  /* and we can have rules that overlap other rules, both take effect */
-  h1 {
-    letter-spacing: 5px;
-    word-spacing: 5px;
-    font-size: 200%;
-  }
-  
-  .autania photo {margin: 10px;
+.comp photo {margin: 10px;
   max-width: 350px;}
-  /* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
-  #content {
-    margin: 10px;
-    padding: 10px;
-    border: solid 11px #fd8e7a;
-    background-color: #9e3030;
-  }
+
+  .mycar photo {margin: 10px;
+    max-width: 350px;}
+
+    .visstu photo {margin: 10px;
+      max-width: 350px;}
   
-  a {
-    display: block;
-  }
