--- a/lab9/css/index.css
+++ b/lab9/css/index.css
@@ -2,7 +2,7 @@
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 body {
-    background-color: #73b8e6;
+    background-color: #4cb3f7;
   } 
   h1,h2,h3 {
     font-family: Arial, Helvetica, sans-serif;
