--- a/lab10/css/index.css
+++ b/lab10/css/index.css
@@ -2,7 +2,7 @@
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 body {
-    background-color: #eff2d0;
+    background-color: #f1e0a5;
   } 
   h1,h2,h3 {
     font-family: Arial, Helvetica, sans-serif;
@@ -10,12 +10,12 @@ body {
   .text p {
     display: inline-block;
     max-width: 60%;
-    margin: 3px;
+    margin: 6px;
     padding: 5px 10px;
     border-radius: 15px;
     background-color: rgb(203, 97, 97);
     color: white;
     font-family: sans-serif;
-    font-size: 0.8em;
+    font-size: 4em;
   } 
   
