--- a/lab12/css/index.css
+++ b/lab12/css/index.css
@@ -3,19 +3,11 @@
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 /* Parchment-style background */
 body {
-  background-image: url('/img/parchment.jpeg'); 
-  background-size: cover; /* makes sure the image covers the entire background */
-  background-attachment: fixed; /* keeps the background fixed as you scroll */
-  background-repeat: no-repeat;
-  font-family: 'Georgia', serif;
-  color: #4b2e2b;
-  padding: 20px;
-  text-align: center;
-}
-
-
-body {
-  background-color: #fdf5e6;
+  background-image: url('/img/parchment.jpeg'), url('/img/castlehogwarts.png');
+  background-size: cover, contain;
+  background-position: top, bottom center;
+  background-repeat: no-repeat, no-repeat;
+  background-attachment: fixed, fixed;
   font-family: 'Georgia', serif;
   color: #4b2e2b;
   padding: 20px;
